--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-monaco-editor": "^0.59.0",
-    "react-resizable-panels": "^3.0.5"
+    "react-resizable-panels": "^3.0.5",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
