--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-dragdata": "^2.3.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
